--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             {
               url: 'https://github.com/vuejsindy',
               name: 'Vue.JS Indy on GitHub'
+            },
+            {
+              url: 'https://vue-land.js.org',
+              name: 'Official Vue.js Chatroom'
             }
           ]
         }
