--- a/parking/index.html
+++ b/parking/index.html
@@ -3,11 +3,14 @@
   <head>
     <title>Vue.js Indy Parking Map</title>
     <style>
+      html,
       body {
-        background: #000;
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 100%;
+        height: 100%;
+        background: #000;
         border: 0px;
         margin: 0px;
         padding: 0px;
