--- a/parking/index.html
+++ b/parking/index.html
@@ -4,20 +4,32 @@
     <title>Vue.js Indy Parking Map</title>
     <style>
       html,
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      body,
+      table,
+      tr,
+      td {
         width: 100%;
         height: 100%;
         background: #000;
         border: 0px;
+        border-spacing: 0px;
         margin: 0px;
         padding: 0px;
+        text-align: center;
+      }
+      img {
+        display: block;
+        margin: 0px auto;
       }
     </style>
   </head>
   <body>
-    <img src="parking-map.jpg" alt="Parking Map" />
+    <table>
+      <tr>
+        <td>
+          <img src="parking-map.jpg" alt="Parking Map" />
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
