add Qumulex to list of companies using Vue

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
           ],
           companies: [
             {
+              name: 'Qumulex, Inc.',
+              url: 'https://www.qumulex.com'
+            },
+            {
               name: 'World Wide Technology',
               url: 'https://www.wwt.com/careers'
             },
