--- a/index.html
+++ b/index.html
@@ -128,10 +128,6 @@
           ],
           companies: [
             {
-              name: 'Qumulex, Inc.',
-              url: 'https://www.qumulex.com'
-            },
-            {
               name: 'World Wide Technology',
               url: 'https://www.wwt.com/careers'
             },
@@ -146,6 +142,10 @@
             {
               name: 'Viral Launch',
               url: 'https://viral-launch.com/careers.html'
+            },
+            {
+              name: 'Qumulex, Inc.',
+              url: 'https://www.qumulex.com/careers'
             },
             {
               name: 'Perq',
