--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
             {
               name: 'Big Nerd Ranch',
               url: 'https://www.bignerdranch.com/about/careers'
+            },
+            {
+              name: 'Navient',
+              url: 'https://jobs.navient.com/search-jobs/Indianapolis%2C%20IN/',
             }
           ],
           sponsors: [
