--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
             },
             {
               name: 'Big Nerd Ranch',
-              url: 'https://www.bignerdranch.com/about/careers'
+              url: 'https://www.bignerdranch.com/about-us/careers'
             },
             {
               name: 'Navient',
-              url: 'https://jobs.navient.com/search-jobs/Indianapolis%2C%20IN/',
+              url: 'https://jobs.navient.com/search-jobs/Indianapolis%2C%20IN',
             }
           ],
           sponsors: [
