--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
               url: 'https://forcemed.com/careers'
             },
             {
+              name: 'Crafted',
+              url: 'https://craftedup.com'
+            },
+            {
               name: 'Passageways, Inc.',
               url: 'https://www.passageways.com/about-passageways/careers'
             },
