--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
               url: 'https://workhere.com/contact'
             },
             {
+              name: 'Clinical Architecture',
+              url: 'https://clinicalarchitecture.com'
+            },
+            {
               name: 'Crossroads Education',
               url: 'https://crossroadseducation.org/about'
             },
